2009-03-21 Alexandru Csete <oz9aec@gmail.com>

    * src/radio-conf.[ch]:
    Added config field for uplink transverter LO. LO values are now optional.
    

2009-03-21 Stephane Fillod <fillods@users.sf.net>

    * src/about.c:
    * src/gtk-polar-view.c:
    * src/gtk-sat-list.c:
    * src/gtk-sat-map.c:
    * src/gtk-single-sat.c:
    * src/menubar.c:
    * src/pass-to-txt.c:
    * src/sat-log-browser.c:
    * src/sat-pass-dialogs.c:
    * src/sat-pref-formats.c:
    * src/sat-pref-list-view.c:
    * src/sat-pref.c:
    * src/sat-vis.c:
    * src/tle-update.c:
    Make gettext() do its job on static strings at runtime.

    * po/fr.po: update


2009-03-20 Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig-editor.c:
    Changed radio type labels.


2009-03-20 Stephane Fillod <fillods@users.sf.net>

    * src/tle-update.c:
    Added Gio error checking and reporting.


2009-03-18 Alexandru Csete <oz9aec@gmail.com>

	* src/sat-pref-qth.c:
	Fixed typo (Debian bug #520203).


2009-03-16 Bruce Cowan <bcowan@fastmail.co.uk>

    * src/sat-cfg.[ch]:
    * src/sat-pref-tle.c:
    Remove proxy configuration item, taken care by GVFS.


2009-03-16 Bruce Cowan <bcowan@fastmail.co.uk>

    * src/menubar.c:
    * src/tle-update.c:
    Port TLE download to GIO.

    * configure.ac:
    * README:
    Remove references to libcurl, add GIO dependency, and bump GLib
    requirement.
    
    * src/about.c:
    Updated credits.
    
    * NEWS:
    Updated.


2009-03-01 Alexandru Csete <oz9aec@gmail.com>

    * configure.ac:
    Changed required GooCanvas version from 0.10 to 0.9 to be compatible
    with older linux distributions, too (e.g. Ubuntu 8.04).
    

2009-02-19 Stephane Fillod <fillods@users.sf.net>

    * po/POTFILES.in:
    Remove goocanv8 files. Update list of C files.
    
    * po/fr.po:
    * configure.ac:
    New file, french l10n
    
    * src/Makefile.am:
    Fixed a typo.

2008-12-28 Alexandru Csete <oz9aec@gmail.com>

    * src/sat-pref-rig-editor.c: